--- a/package.json
+++ b/package.json
@@ -5,11 +5,24 @@
     "scripts": {
         "build": "node ace build --production",
         "start": "node server.js",
-        "dev": "node ace serve --watch"
+        "dev": "node ace serve --watch",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@adonisjs/assembler": "^5.3.5",
         "adonis-preset-ts": "^2.1.0",
+        "browser-sync": "^2.27.5",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.27",
+        "laravel-mix-serve": "^2.2.2",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
         "pino-pretty": "^5.1.3",
         "typescript": "~4.2",
         "youch": "^2.2.2",
