--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     },
     "devDependencies": {
         "@adonisjs/assembler": "^5.3.5",
+        "@symfony/webpack-encore": "^1.5.0",
         "adonis-preset-ts": "^2.1.0",
-        "browser-sync": "^2.27.5",
-        "browser-sync-webpack-plugin": "^2.3.0",
+        "autoprefixer": "^10.3.1",
         "cross-env": "^7.0.3",
+        "css-loader": "^6.2.0",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "laravel-mix": "^6.0.27",
-        "laravel-mix-serve": "^2.2.2",
+        "node-sass": "^6.0.1",
+        "pino-pretty": "^5.1.3",
+        "postcss": "^8.3.6",
+        "postcss-loader": "^6.1.1",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "pino-pretty": "^5.1.3",
+        "sass-loader": "^12.1.0",
+        "style-loader": "^3.2.1",
+        "tailwindcss": "^2.2.7",
         "typescript": "~4.2",
         "youch": "^2.2.2",
         "youch-terminal": "^1.1.1"
@@ -37,6 +43,7 @@
         "@adonisjs/session": "^6.0.0",
         "@adonisjs/shield": "^7.0.0",
         "@adonisjs/view": "^6.0.0",
+        "@tailwindcss/forms": "^0.3.3",
         "luxon": "^2.0.2",
         "mysql": "^2.18.1",
         "proxy-addr": "^2.0.7",
