[ADD] preparing for admin dashboard

--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,6 +1,30 @@
 {
   "assets/app.css": "/assets/app.css",
   "assets/app.js": "/assets/app.js",
+  "assets/admin.css": "/assets/admin.css",
+  "assets/admin.js": "/assets/admin.js",
+  "assets/images/fa-solid-900.svg": "/assets/images/fa-solid-900.7a8b4f13.svg",
+  "assets/images/fa-brands-400.svg": "/assets/images/fa-brands-400.2f517e09.svg",
   "assets/img/content/library-5219747_1280.jpg": "/assets/img/content/library-5219747_1280.jpg",
-  "assets/img/icon/keyboard_arrow_down_black_24dp.svg": "/assets/img/icon/keyboard_arrow_down_black_24dp.svg"
+  "assets/fonts/fa-solid-900.eot": "/assets/fonts/fa-solid-900.9bbb245e.eot",
+  "assets/fonts/fa-solid-900.ttf": "/assets/fonts/fa-solid-900.be9ee23c.ttf",
+  "assets/images/fa-regular-400.svg": "/assets/images/fa-regular-400.4689f52c.svg",
+  "assets/fonts/fa-brands-400.eot": "/assets/fonts/fa-brands-400.23f19bb0.eot",
+  "assets/fonts/fa-brands-400.ttf": "/assets/fonts/fa-brands-400.527940b1.ttf",
+  "assets/fonts/fa-solid-900.woff": "/assets/fonts/fa-solid-900.eeccf4f6.woff",
+  "assets/fonts/fa-brands-400.woff": "/assets/fonts/fa-brands-400.2285773e.woff",
+  "assets/fonts/fa-solid-900.woff2": "/assets/fonts/fa-solid-900.1551f4f6.woff2",
+  "assets/fonts/fa-brands-400.woff2": "/assets/fonts/fa-brands-400.d878b0a6.woff2",
+  "assets/fonts/fa-regular-400.eot": "/assets/fonts/fa-regular-400.77206a6b.eot",
+  "assets/fonts/fa-regular-400.ttf": "/assets/fonts/fa-regular-400.491974d1.ttf",
+  "assets/fonts/fa-regular-400.woff": "/assets/fonts/fa-regular-400.bb58e57c.woff",
+  "assets/fonts/fa-regular-400.woff2": "/assets/fonts/fa-regular-400.7a333762.woff2",
+  "assets/fonts/summernote.eot": "/assets/fonts/summernote.bd0d8be1.eot",
+  "assets/fonts/summernote.ttf": "/assets/fonts/summernote.b293d601.ttf",
+  "assets/fonts/summernote.woff": "/assets/fonts/summernote.08c343ff.woff",
+  "assets/img/icon/preloader.gif": "/assets/img/icon/preloader.gif",
+  "assets/fonts/summernote.woff2": "/assets/fonts/summernote.7c9436ed.woff2",
+  "assets/img/icon/keyboard_arrow_down_black_24dp.svg": "/assets/img/icon/keyboard_arrow_down_black_24dp.svg",
+  "assets/img/icon/upnvj.svg": "/assets/img/icon/upnvj.svg",
+  "assets/img/icon/bemupnvj.svg": "/assets/img/icon/bemupnvj.svg"
 }
