[UPDATE] preparing for auth

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
+APP_NAME='BEMUPNVJ Mardhika'
 APP_KEY=kQWcCyFynqby0ZgpGsTn-w8HnnHWY8jQ
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
@@ -10,3 +11,4 @@ MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=
 MYSQL_DB_NAME=lucid
+HASH_DRIVER=bcrypt
