--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@adonisjs/ally": "^4.1.0",
+        "@adonisjs/auth": "^8.0.7",
         "@adonisjs/core": "^5.1.11",
         "@adonisjs/lucid": "^15.0.3",
         "@adonisjs/mail": "^7.2.3",
@@ -45,8 +46,10 @@
         "@adonisjs/shield": "^7.0.0",
         "@adonisjs/view": "^6.0.0",
         "@tailwindcss/forms": "^0.3.3",
+        "debug": "^4.3.2",
         "luxon": "^2.0.2",
         "mysql": "^2.18.1",
+        "phc-bcrypt": "^1.0.7",
         "proxy-addr": "^2.0.7",
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19"
