--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ coverage
 .env
 tmp
 public/assets
+public/uploads
 resources/assets/vendors/AdminLTE/plugins/**/esm
 resources/assets/vendors/AdminLTE/plugins/**/umd
