--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@adonisjs/ally": "^4.1.0",
         "@adonisjs/auth": "^8.0.7",
         "@adonisjs/core": "^5.1.11",
+        "@adonisjs/drive": "^2.0.6",
         "@adonisjs/lucid": "^15.0.3",
         "@adonisjs/mail": "^7.2.3",
         "@adonisjs/repl": "^3.0.0",
