--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "css-loader": "^6.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "laravel-mix": "^6.0.28",
+        "laravel-mix-serve": "^2.2.2",
         "node-sass": "^6.0.1",
         "pino-pretty": "^5.1.3",
         "popper.js": "^1.16.1",
