--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@adonisjs/session": "^6.0.0",
         "@adonisjs/shield": "^7.0.5",
         "@adonisjs/view": "^6.0.0",
+        "@fancyapps/fancybox": "^3.5.7",
         "@tailwindcss/forms": "^0.3.3",
         "bootstrap": "^5.1.0",
         "bs-custom-file-input": "^1.3.4",
