--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@adonisjs/core": "^5.1.11",
         "@adonisjs/drive": "^2.0.6",
         "@adonisjs/lucid": "^15.0.3",
+        "@adonisjs/lucid-slugify": "^2.1.3",
         "@adonisjs/mail": "^7.2.3",
         "@adonisjs/repl": "^3.0.0",
         "@adonisjs/session": "^6.0.0",
