--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,9 @@
       "@adonisjs/view",
       "@adonisjs/shield",
       "@adonisjs/lucid",
-      "@adonisjs/auth"
+      "@adonisjs/auth",
+      "@adonisjs/lucid-slugify"
     ],
-    "noUnusedLocals": false,
+    "noUnusedLocals": false
   }
 }
