--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
         "@adonisjs/view": "^6.0.0",
         "@fancyapps/fancybox": "^3.5.7",
         "@tailwindcss/forms": "^0.3.3",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.0",
         "bs-custom-file-input": "^1.3.4",
         "daterangepicker": "^3.1.0",
         "debug": "^4.3.2",
+        "fslightbox": "^3.3.0-2",
         "icheck-bootstrap": "^3.0.1",
         "jquery": "^3.6.0",
         "jqvmap": "^1.5.1",
