--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "sass-loader": "^12.1.0",
         "style-loader": "^3.2.1",
         "tailwindcss": "^2.2.7",
+        "tailwindcss-pseudo-elements": "^2.0.0",
         "typescript": "~4.2",
         "youch": "^2.2.2",
         "youch-terminal": "^1.1.1"
@@ -67,6 +68,7 @@
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
         "summernote": "^0.8.18",
+        "sweetalert2": "^11.1.5",
         "tempusdominus-bootstrap-4": "^5.39.0"
     }
 }
