--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/assets/js/app.js": "/assets/js/app.js",
     "/assets/js/admin.js": "/assets/js/admin.js",
+    "/assets/css/app.css": "/assets/css/app.css",
     "/assets/video/cara-embed-map.mp4": "/assets/video/cara-embed-map.mp4",
     "/assets/css/admin.css": "/assets/css/admin.css"
 }
