--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@symfony/webpack-encore": "^1.5.0",
         "adonis-preset-ts": "^2.1.0",
         "autoprefixer": "^10.3.1",
+        "browser-sync": "^2.27.5",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "css-loader": "^6.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
