--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "summernote": "^0.8.18",
         "sweetalert2": "^11.1.5",
         "tempusdominus-bootstrap-4": "^5.39.0",
+        "vanilla-lazyload": "^17.4.0",
         "vanilla-router": "^1.2.8"
     }
 }
