--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "sweetalert2": "^11.1.5",
         "tempusdominus-bootstrap-4": "^5.39.0",
         "vanilla-lazyload": "^17.4.0",
-        "vanilla-router": "^1.2.8"
+        "vanilla-router": "^1.2.8",
+        "vissense": "^0.10.0"
     }
 }
