--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,9 @@
     "/assets/js/admin.js": "/assets/js/admin.js",
     "/assets/css/app.css": "/assets/css/app.css",
     "/assets/video/cara-embed-map.mp4": "/assets/video/cara-embed-map.mp4",
+    "/uploads/contact/envelope-solid.svg": "/uploads/contact/envelope-solid.svg",
+    "/uploads/contact/map-marked-solid.svg": "/uploads/contact/map-marked-solid.svg",
+    "/uploads/contact/phone-alt-solid.svg": "/uploads/contact/phone-alt-solid.svg",
+    "/uploads/file/sample.pdf": "/uploads/file/sample.pdf",
     "/assets/css/admin.css": "/assets/css/admin.css"
 }
