[ADD] sataset crud

--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
         "icheck-bootstrap": "^3.0.1",
         "jquery": "^3.6.0",
         "jqvmap": "^1.5.1",
+        "jsonfile": "^6.1.0",
         "luxon": "^2.0.2",
         "mysql": "^2.18.1",
         "overlayscrollbars": "^1.13.1",
+        "pdfobject": "^2.2.7",
         "phc-bcrypt": "^1.0.7",
         "proxy-addr": "^2.0.7",
         "reflect-metadata": "^0.1.13",
